--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,23 @@
 
 
 
+@keyframes appear{
+  from{
+    opacity: 0;
+    transform: translateX(-100%);
+}
 
+to{
+  opacity: 1;
+  transform: translateX(0px);
+}
+}
+
+.block{
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
 
  
 
