--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 
-@plugin "daisyui" {
+@plugin "daisyui" 
+{
   themes: light --default, dark --prefersdark;
   root: ":root";
   include: ;
@@ -8,44 +9,51 @@
   logs: true;
 }
 
-.aclonica-regular {
+.aclonica-regular 
+{
     font-family: "Aclonica", sans-serif;
     font-weight: 400;
     font-style: normal;
     
   }
 
-  .bellota-light {
+  .bellota-light 
+  {
     font-family: "Bellota", system-ui;
     font-weight: 300;
     font-style: normal;
   }
   
-  .bellota-regular {
+  .bellota-regular 
+  {
     font-family: "Bellota", system-ui;
     font-weight: 400;
     font-style: normal;
   }
   
-  .bellota-bold {
+  .bellota-bold 
+  {
     font-family: "Bellota", system-ui;
     font-weight: 700;
     font-style: normal;
   }
   
-  .bellota-light-italic {
+  .bellota-light-italic 
+  {
     font-family: "Bellota", system-ui;
     font-weight: 300;
     font-style: italic;
   }
   
-  .bellota-regular-italic {
+  .bellota-regular-italic 
+  {
     font-family: "Bellota", system-ui;
     font-weight: 400;
     font-style: italic;
   }
   
-  .bellota-bold-italic {
+  .bellota-bold-italic 
+  {
     font-family: "Bellota", system-ui;
     font-weight: 700;
     font-style: italic;
@@ -53,7 +61,8 @@
 
 
 
-.inter {
+.inter 
+{
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -62,26 +71,31 @@
   
  
 
-  .wd{
+  .wd
+  {
     width: 100%;
   }
 
 
 
 
-@keyframes appear{
-  from{
+@keyframes appear
+{
+  from
+  {
     opacity: 0;
     transform: translateX(-100%);
 }
 
-to{
+to
+{
   opacity: 1;
   transform: translateX(0px);
 }
 }
 
-.block{
+.block
+{
   animation: appear linear;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
